manifests/deployment-productpage-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage-dev
  labels:
    app: productpage
    version: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: dev
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: productpage
        version: dev
    spec:
      containers:
        - name: productpage
          image: quay.io/rohanp/warproject:dev
          imagePullPolicy: IfNotPresent
